--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -93,11 +93,11 @@ sim-invalid = Wrong SIM PIN!
 
 # RPP-4 (RPP: Features)
 remote-locate = Remote Locate
-remote-locate-desc = You can locate this device via SMS as following: “RPP locate YOURPASSPHRASE”
+remote-locate-desc = You can locate this device via SMS as following: RPP locate YOURPASSPHRASE
 remote-ring = Remote Ring
-remote-ring-desc = You can ring this device via SMS as following: “RPP ring YOURPASSPHRASE”
+remote-ring-desc = You can ring this device via SMS as following: RPP ring YOURPASSPHRASE
 remote-lock = Remote Lock
-remote-lock-desc = You can lock this device via SMS as following: “RPP lock YOURPASSPHRASE”
+remote-lock-desc = You can lock this device via SMS as following: RPP lock YOURPASSPHRASE
 
 
 # RPP-5 (RPP: No LockScreen Alert)
@@ -168,21 +168,21 @@ gt-rpp-passphrase-desc = Tap "Remote Privacy Protection" and set your passphrase
 # GT-8 (GT: RPP locate phone)
 gt-rpp-locate-header = How to locate my phone?
 gt-rpp-locate-desc1 = If your phone is lost, just take the phone of a friend and send a SMS with
-gt-rpp-locate-command = “RPP locate YOURPASSPHRASE“
+gt-rpp-locate-command = RPP locate YOURPASSPHRASE
 gt-rpp-locate-desc2 = to your phone number and you‘ll get the exact GPS coordinates via SMS in return. Make sure to set up the passphrase!
 
 
 # GT-9 (GT: RPP ring phone)
 gt-rpp-ring-header = How to ring your phone?
 gt-rpp-ring-desc1 = It‘s easy! Just send an SMS with
-gt-rpp-ring-command = “RPP ring YOURPASSPHRASE”
+gt-rpp-ring-command = RPP ring YOURPASSPHRASE
 gt-rpp-ring-desc2 = to your phone number and it will ring until you find it and unlock it.
 
 
 # GT-10 (GT: RPP lock phone)
 gt-rpp-lock-header = How to lock my phone?
 gt-rpp-lock-desc1 = If you have lost your phone and you want to lock it remotely just send an SMS with
-gt-rpp-lock-command = “RPP lock YOURPASSPHRASE”
+gt-rpp-lock-command = RPP lock YOURPASSPHRASE
 gt-rpp-lock-desc2 = to your phone number. The phone will lock itself and only you will be able to unlock it with your regular screen passcode.
 
 
