--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -1,14 +1,15 @@
 # Main Page
 privacy-panel = Privacy Panel
 location-accuracy = Location Accuracy
-remote-privacy-protection = Remote Privacy Protection
+remote-privacy-protection = Remote Protection
 guided-tour = Guided Tour
 
 
 # ALA-3 (ALA: Adjust Location Accuracy)
-use-geolocation = Use geolocation
-use-location-adjustment = Use location adjustment
-location-adjustment-information = Remember: Location Adjustment influences the location Firefox OS provides to apps. It will not affect your IP-address or locale settings, so some services might still be able to locate you.
+ala-panel = Location Accuracy
+use-geolocation = Geolocation
+use-location-adjustment = Location adjustment
+location-adjustment-information = Remember: Location Adjustment influences the location {{brandShortName}} provides to apps. It will not affect your IP-address or locale settings, so some services might still be able to locate you.
 location-adjustment-description = Adjust the global accuracy level of your current location for all apps, define and set a permanent fixed location and add exceptions for single apps.
 adjustment = Adjustment
 add-exceptions = Add exceptions
@@ -16,6 +17,10 @@ add-exceptions = Add exceptions
 
 # ALA-4 (ALA: Exception List)
 app-list-description = This list shows all the apps, which are allowed to use your location.
+type-user-defined = User defined
+type-blur = {{blur}} blur
+type-precise = Precise
+type-no-location = No location
 
 
 # ALA-5 (ALA: No Custom Location Alert)
@@ -26,6 +31,7 @@ ala-custom-location-alert = You haven't set a custom location yet. Please set th
 # ALA-6 (ALA: Custom Location)
 custom-location = Custom Location
 set-custom-location = Set custom location
+set-location = Set location
 custom-location-description = Set a custom location which is used as a fixed position.
 
 
@@ -42,7 +48,7 @@ exceptions-application-description = Adjust the custom location accuracy level o
 
 
 # ALA-10 (ALA: Define Custom Location)
-define-custom-location = Define custom location
+define-custom-location = Custom location
 choose-a-region-city = Choose a region/city
 region = Region
 city = City
@@ -58,7 +64,7 @@ global-settings = Global Settings
 
 
 # RPP-1 (RPP: Register)
-rpp-panel = Remote Privacy Protection
+rpp-panel = Remote Protection
 rpp-new-password-description = Please set a passphrase to secure your remote features (maximum 100 characters).
 new-passphrase.placeholder = New passphrase
 confirm-new-passphrase.placeholder = Confirm new passphrase
@@ -102,6 +108,7 @@ remote-lock-desc = You can lock this device via SMS as following: RPP lock YOURP
 
 # RPP-5 (RPP: No LockScreen Alert)
 rpp-lockscreen-alert = Please activate lockscreen AND passcode in the system settings to use the Remote Privacy Protection.
+take-me-there = Take me there
 
 
 # RPP-7 (RPP: Screen Lock)
@@ -206,7 +213,7 @@ about-privacy-panel = About Privacy Panel
 version = Version
 build-id = Build-ID
 about-header = About the Privacy Panel
-about-description = Together with Deutsche Telecom the Mozilla Foundation developed the Privacy Panel to enable the user to take back control of the personal data ...
+about-description = Together with Deutsche Telecom the Mozilla Foundation developed the Privacy Panel to enable the user to take back control of the personal data…
 
 
 
