--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -63,21 +63,21 @@ global-settings = Global Settings
 
 
 
-# RPP-1 (RPP: Register)
-rpp-panel = Remote Protection
-rpp-new-password-description = Please set a passphrase to secure your remote features (maximum 100 characters).
+# RP-1 (RP: Register)
+rp-panel = Remote Protection
+rp-new-password-description = Please set a passphrase to secure your remote features (maximum 100 characters).
 new-passphrase.placeholder = New passphrase
 confirm-new-passphrase.placeholder = Confirm new passphrase
 
 
-# RPP-2 (RPP: Login)
-rpp-login-description = Please enter your passphrase.
-rpp-change-password = Forgot/Change your passphrase?
+# RP-2 (RP: Login)
+rp-login-description = Please enter your passphrase.
+rp-change-password = Forgot/Change your passphrase?
 passphrase.placeholder = Passphrase
 
 
-# RPP-3 (RPP: Reset/Change PassPhrase)
-rpp-change-password-description = To reset your passphrase please enter Passcode lock/SIM PIN and new passphrase.
+# RP-3 (RP: Reset/Change PassPhrase)
+rp-change-password-description = To reset your passphrase please enter Passcode lock/SIM PIN and new passphrase.
 sim1 = SIM 1
 sim2 = SIM 2
 enter-sim1.placeholder = Enter SIM 1 Pin Code
@@ -85,7 +85,7 @@ enter-sim2.placeholder = Enter SIM 2 Pin Code
 enter-passcode.placeholder = Enter PassCode
 
 
-# RPP-1, RPP-2, RPP-3 (RPP: Validation)
+# RP-1, RP-2, RP-3 (RP: Validation)
 passphrase-wrong = Passphrase is wrong!
 passphrase-empty = Passphrase is empty!
 passphrase-too-long = Passphrase is too long!
@@ -97,21 +97,21 @@ pin-different = Wrong Passcode lock!
 sim-invalid = Wrong SIM PIN!
 
 
-# RPP-4 (RPP: Features)
+# RP-4 (RP: Features)
 remote-locate = Remote Locate
-remote-locate-desc = You can locate this device via SMS as following: RPP locate YOURPASSPHRASE
+remote-locate-desc = You can locate this device via SMS as following: RP locate YOURPASSPHRASE
 remote-ring = Remote Ring
-remote-ring-desc = You can ring this device via SMS as following: RPP ring YOURPASSPHRASE
+remote-ring-desc = You can ring this device via SMS as following: RP ring YOURPASSPHRASE
 remote-lock = Remote Lock
-remote-lock-desc = You can lock this device via SMS as following: RPP lock YOURPASSPHRASE
+remote-lock-desc = You can lock this device via SMS as following: RP lock YOURPASSPHRASE
 
 
-# RPP-5 (RPP: No LockScreen Alert)
-rpp-lockscreen-alert = Please activate lockscreen AND passcode in the system settings to use the Remote Privacy Protection.
+# RP-5 (RP: No LockScreen Alert)
+rp-lockscreen-alert = Please activate lockscreen AND passcode in the system settings to use the Remote Protection.
 take-me-there = Take me there
 
 
-# RPP-7 (RPP: Screen Lock)
+# RP-7 (RP: Screen Lock)
 lock-screen = Screen Lock
 screen-lock-header = Screen Lock
 passcode-lock = Passcode Lock
@@ -162,35 +162,35 @@ gt-ala-exceptions-header = What is location per app?
 gt-ala-exceptions-desc = Here you will find an overview of all apps, that can access your geolocation. You can adjust the settings for each app individually. They overwrite the global location accuracy for that app.
 
 
-# GT-6 (GT: RPP intro screen)
-gt-rpp-explain-header = Remote Privacy Protection? What is it?
-gt-rpp-explain-desc = If your phone is stolen or lost, you can use the Remote Privacy Protection. With another phone you can locate it, let it ring or even lock it remotely. You first have to set your personal passphrase and enable the features you will want to use (locate, ring and lock).
+# GT-6 (GT: RP intro screen)
+gt-rp-explain-header = Remote Protection? What is it?
+gt-rp-explain-desc = If your phone is stolen or lost, you can use the Remote Protection. With another phone you can locate it, let it ring or even lock it remotely. You first have to set your personal passphrase and enable the features you will want to use (locate, ring and lock).
 
 
-# GT-7 (GT: RPP passphrase)
-gt-rpp-passphrase-header = How to set your personal passphrase?
-gt-rpp-passphrase-desc = Tap "Remote Privacy Protection" and set your passphrase to secure your remote features. If you have forgotten your actual passphrase you can reset it using your SIM PIN or lockscreen passcode.
+# GT-7 (GT: RP passphrase)
+gt-rp-passphrase-header = How to set your personal passphrase?
+gt-rp-passphrase-desc = Tap "Remote Protection" and set your passphrase to secure your remote features. If you have forgotten your actual passphrase you can reset it using your SIM PIN or lockscreen passcode.
 
 
-# GT-8 (GT: RPP locate phone)
-gt-rpp-locate-header = How to locate my phone?
-gt-rpp-locate-desc1 = If your phone is lost, just take the phone of a friend and send a SMS with
-gt-rpp-locate-command = RPP locate YOURPASSPHRASE
-gt-rpp-locate-desc2 = to your phone number and you‘ll get the exact GPS coordinates via SMS in return. Make sure to set up the passphrase!
+# GT-8 (GT: RP locate phone)
+gt-rp-locate-header = How to locate my phone?
+gt-rp-locate-desc1 = If your phone is lost, just take the phone of a friend and send a SMS with
+gt-rp-locate-command = RP locate YOURPASSPHRASE
+gt-rp-locate-desc2 = to your phone number and you‘ll get the exact GPS coordinates via SMS in return. Make sure to set up the passphrase!
 
 
-# GT-9 (GT: RPP ring phone)
-gt-rpp-ring-header = How to ring your phone?
-gt-rpp-ring-desc1 = It‘s easy! Just send an SMS with
-gt-rpp-ring-command = RPP ring YOURPASSPHRASE
-gt-rpp-ring-desc2 = to your phone number and it will ring until you find it and unlock it.
+# GT-9 (GT: RP ring phone)
+gt-rp-ring-header = How to ring your phone?
+gt-rp-ring-desc1 = It‘s easy! Just send an SMS with
+gt-rp-ring-command = RP ring YOURPASSPHRASE
+gt-rp-ring-desc2 = to your phone number and it will ring until you find it and unlock it.
 
 
-# GT-10 (GT: RPP lock phone)
-gt-rpp-lock-header = How to lock my phone?
-gt-rpp-lock-desc1 = If you have lost your phone and you want to lock it remotely just send an SMS with
-gt-rpp-lock-command = RPP lock YOURPASSPHRASE
-gt-rpp-lock-desc2 = to your phone number. The phone will lock itself and only you will be able to unlock it with your regular screen passcode.
+# GT-10 (GT: RP lock phone)
+gt-rp-lock-header = How to lock my phone?
+gt-rp-lock-desc1 = If you have lost your phone and you want to lock it remotely just send an SMS with
+gt-rp-lock-command = RP lock YOURPASSPHRASE
+gt-rp-lock-desc2 = to your phone number. The phone will lock itself and only you will be able to unlock it with your regular screen passcode.
 
 
 
