--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -18,14 +18,14 @@ add-exceptions = Add exceptions
 # ALA-4 (ALA: Exception List)
 app-list-description = This list shows all the apps, which are allowed to use your location.
 type-user-defined = User defined
-type-blur = {{blur}} blur
+type-blur = {{blurRadius}} blur
 type-precise = Precise
 type-no-location = No location
 
 
 # ALA-5 (ALA: No Custom Location Alert)
 attention = Attention!
-ala-custom-location-alert = You haven't set a custom location yet. Please set this before working on other settings!
+ala-custom-location-alert = You haven’t set a custom location yet. Please set this before working on other settings!
 
 
 # ALA-6 (ALA: Custom Location)
@@ -139,12 +139,12 @@ passcode-doesnt-match = Passcode doesn’t match. Try again.
 
 # GT-1 (Guided Tour intro- screen)
 gt-main-header = Welcome to the Privacy Panel!
-gt-main-desc = This app will help you enhance your privacy protection and enables you to lock or find your phone if it's lost. Just have a closer look. It takes only 2 minutes!
+gt-main-desc = This app will help you enhance your privacy protection and enables you to lock or find your phone if it’s lost. Just have a closer look. It takes only 2 minutes!
 
 
 # GT-2 (GT: ALA intro screen)
 gt-ala-explain-header = What is Location Adjustment good for?
-gt-ala-explain-desc = Many apps access your geolocation, like the addressbook or the camera. If you don't want to disclose your exact position, you can adjust the accuracy of your current location that is used by apps, set a custom location or hide your geolocation.
+gt-ala-explain-desc = Many apps access your geolocation, like the addressbook or the camera. If you don’t want to disclose your exact position, you can adjust the accuracy of your current location that is used by apps, set a custom location or hide your geolocation.
 
 
 # GT-3 (GT: ALA general settings screen )
