--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -1,15 +1,15 @@
 # Main Page
 privacy-panel = Privacy Panel
 location-accuracy = Location Accuracy
-remote-privacy-protection = Remote Protection
+remote-privacy = Remote Protection
 guided-tour = Guided Tour
 
 
 # ALA-3 (ALA: Adjust Location Accuracy)
-ala-panel = Location Accuracy
-use-geolocation = Geolocation
-use-location-adjustment = Location adjustment
-location-adjustment-information = Remember: Location Adjustment influences the location {{brandShortName}} provides to apps. It will not affect your IP-address or locale settings, so some services might still be able to locate you.
+la-panel = Location Accuracy
+geolocation = Geolocation
+location-adjustment = Location adjustment
+location-adjustment-info = Remember: Location Adjustment influences the location {{brandShortName}} provides to apps. It will not affect your IP-address or locale settings, so some services might still be able to locate you.
 location-adjustment-description = Adjust the global accuracy level of your current location for all apps, define and set a permanent fixed location and add exceptions for single apps.
 adjustment = Adjustment
 add-exceptions = Add exceptions
@@ -48,7 +48,7 @@ exceptions-application-description = Adjust the custom location accuracy level o
 
 
 # ALA-10 (ALA: Define Custom Location)
-define-custom-location = Custom location
+custom-location = Custom location
 choose-a-region-city = Choose a region/city
 region = Region
 city = City
@@ -99,11 +99,11 @@ sim-invalid = Wrong SIM PIN!
 
 # RP-4 (RP: Features)
 remote-locate = Remote Locate
-remote-locate-desc = You can locate this device via SMS as following: RP locate YOURPASSPHRASE
+remote-locate-description = You can locate this device via SMS as following: RP locate YOURPASSPHRASE
 remote-ring = Remote Ring
-remote-ring-desc = You can ring this device via SMS as following: RP ring YOURPASSPHRASE
+remote-ring-description = You can ring this device via SMS as following: RP ring YOURPASSPHRASE
 remote-lock = Remote Lock
-remote-lock-desc = You can lock this device via SMS as following: RP lock YOURPASSPHRASE
+remote-lock-description = You can lock this device via SMS as following: RP lock YOURPASSPHRASE
 
 
 # RP-5 (RP: No LockScreen Alert)
@@ -213,7 +213,7 @@ about-privacy-panel = About Privacy Panel
 version = Version
 build-id = Build-ID
 about-header = About the Privacy Panel
-about-description = Together with Deutsche Telecom the Mozilla Foundation developed the Privacy Panel to enable the user to take back control of the personal data…
+about-desc = Together with Deutsche Telekom the Mozilla Foundation developed the Privacy Panel to enable the user to take back control of the personal data…
 
 
 
