changes from flod

--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -57,11 +57,9 @@ enter-gps-coordinates = Enter GPS Coordinates
 enter-gps-description = Please enter the GPS coordinates for longitude from -180.0 to 180 and latitude from -90.0 to 90.0 degree with a dot to separate full degrees lower values.
 latitude = Latitude
 longitude = Longitude
-blur-unit-m = m
-blur-unit-km = km
 # LOCALIZATION NOTE (blur-distance): blur distance can vary from 500 m to 1000 km. 
 # {{ unit }} will be replace with blur-unit-* strings.
-blur-distance = {{ n }} {{ unit }}
+blur-unit = {{ value }} {{ unit }}
 
 # ALA-13 (ALA: System Default)
 global-settings = Global Settings
@@ -85,9 +83,7 @@ passphrase.placeholder = Passphrase
 rp-change-password-description = To reset your passphrase please enter Passcode lock/SIM PIN and new passphrase.
 sim1 = SIM 1
 sim2 = SIM 2
-enter-sim1.placeholder = Enter SIM 1 Pin Code
-enter-sim2.placeholder = Enter SIM 2 Pin Code
-enter-passcode.placeholder = Enter PassCode
+enter.placeholder = Enter Code
 
 
 # RP-1, RP-2, RP-3 (RP: Validation)
@@ -98,6 +94,7 @@ passphrase-invalid = You cannot use special characters!
 passphrase-different = Confirmation must match passphrase!
 pin-empty = Passcode lock is empty!
 pin-invalid = Wrong Passcode lock!
+passcode-long = Passcode should be 4 digits!
 pin-different = Wrong Passcode lock!
 sim-invalid = Wrong SIM PIN!
 
@@ -116,7 +113,7 @@ rp-lockscreen-alert = Please activate lockscreen AND passcode in the system sett
 take-me-there = Take me there
 
 
-# RP-7 (RP: Screen Lock)
+#  RP-7 (RP: Screen Lock)
 lock-screen = Screen Lock
 screen-lock-header = Screen Lock
 passcode-lock = Passcode Lock
