--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -84,9 +84,7 @@ passphrase.placeholder = Passphrase
 rp-change-password-description = To reset your passphrase please enter Passcode lock/SIM PIN and new passphrase.
 sim1 = SIM 1
 sim2 = SIM 2
-enter-sim1.placeholder = Enter SIM 1 Pin Code
-enter-sim2.placeholder = Enter SIM 2 Pin Code
-enter-passcode.placeholder = Enter PassCode
+enter.placeholder = Enter Code
 
 
 # RP-1, RP-2, RP-3 (RP: Validation)
@@ -97,6 +95,7 @@ passphrase-invalid = You cannot use special characters!
 passphrase-different = Confirmation must match passphrase!
 pin-empty = Passcode lock is empty!
 pin-invalid = Wrong Passcode lock!
+passcode-long = Passcode can be max 4 digits!
 pin-different = Wrong Passcode lock!
 sim-invalid = Wrong SIM PIN!
 
@@ -115,7 +114,7 @@ rp-lockscreen-alert = Please activate lockscreen AND passcode in the system sett
 take-me-there = Take me there
 
 
-# RP-7 (RP: Screen Lock)
+#  RP-7 (RP: Screen Lock)
 lock-screen = Screen Lock
 screen-lock-header = Screen Lock
 passcode-lock = Passcode Lock
