next portion of changes

--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -56,11 +56,11 @@ enter-gps-coordinates = Enter GPS Coordinates
 enter-gps-description = Please enter the GPS coordinates for longitude from -180.0 to 180 and latitude from -90.0 to 90.0 degree with a dot to separate full degrees lower values.
 latitude = Latitude
 longitude = Longitude
-blur-unit-m = m
-blur-unit-km = km
+#blur-unit-m = {{ unit }} m
+#blur-unit-km = {{ unit }} km
 # LOCALIZATION NOTE (blur-distance): blur distance can vary from 500 m to 1000 km. 
 # {{ unit }} will be replace with blur-unit-* strings.
-blur-distance = {{ n }} {{ unit }}
+blur-unit = {{ value }} {{ unit }}
 
 # ALA-13 (ALA: System Default)
 global-settings = Global Settings
@@ -95,7 +95,7 @@ passphrase-invalid = You cannot use special characters!
 passphrase-different = Confirmation must match passphrase!
 pin-empty = Passcode lock is empty!
 pin-invalid = Wrong Passcode lock!
-passcode-long = Passcode can be max 4 digits!
+passcode-long = Passcode should be 4 digits!
 pin-different = Wrong Passcode lock!
 sim-invalid = Wrong SIM PIN!
 
