--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -56,8 +56,8 @@ enter-gps-coordinates = Enter GPS Coordinates
 enter-gps-description = Please enter the GPS coordinates for longitude from -180.0 to 180 and latitude from -90.0 to 90.0 degree with a dot to separate full degrees lower values.
 latitude = Latitude
 longitude = Longitude
-#blur-unit-m = {{ unit }} m
-#blur-unit-km = {{ unit }} km
+blur-unit-m = {{ unit }} m
+blur-unit-km = {{ unit }} km
 # LOCALIZATION NOTE (blur-distance): blur distance can vary from 500 m to 1000 km. 
 # {{ unit }} will be replace with blur-unit-* strings.
 blur-unit = {{ value }} {{ unit }}
