fix for the issue, not tested

--- a/apps/privacy-panel/locales/privacypanel.en-US.properties
+++ b/apps/privacy-panel/locales/privacypanel.en-US.properties
@@ -89,7 +89,7 @@ passphrase-different = Confirmation must match passphrase!
 pin-empty = Passcode lock is empty!
 pin-invalid = Wrong Passcode lock!
 pin-different = Wrong Passcode lock!
-sim-invalid = Wrong SIM PIN!
+sim-invalid-try = Wrong SIM PIN!{{value}} passcode attempts left!
 
 
 # RPP-4 (RPP: Features)
